# langton_ants_win32

./: .gitignore  BUILD.gn  README.md  clang_format.sh  langton_ants.iss
assets/: Readme.txt  buildwav.sh
src/: ants.cc  ants.h  framework.h  globals.h  langton_ants.rc  main.cc  main.h  resource.h  sound.cc  sound.h  utils.cc  utils.h  version.h
src/logging/: BUILD.gn  check.cc  check.h  console.cc  file_util.h  logging.cc  logging.h  logging_base.h
src/res/: langton_ants.manifest  save.old  timer.old
